Replace TODO with sem to fill out the template

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [DEFAULT]
-subpackage = TODO
+subpackage = sem
 
 [metadata]
-author = TODO
-author_email = TODO
-description = TODO
+author = Hans Johnson, Michal Brzus, Benjamin Gorman, Chase Johnson
+author_email = hans-johnson@uiowa.edu, michal-brzus@uiowa.edu, benjamin-gorman@uiowa.edu, charles-e-johnson@uiowa.edu
+description = sem (Slicer Execution Model) functions wrapped in pydra tasks
 
 [options]
 python_requires = >=3.7
